# nessie

./: .gitignore  LICENSE  README.md  cleanup.sh  diff_analysis.py  gen_cov_for_repo.sh  gen_cov_for_repo_list.sh  get_api_specs.sh  get_cov_from_tests.sh  reg_test_for_repo_at_commits.sh
df-testgen/: .gitignore  Cargo.toml
df-testgen/js_tools/: api_info.js
df-testgen/src/: decisions.rs  discovery.rs  errors.rs  functions.rs  lib.rs  main.rs  module_reps.rs  test_bodies.rs  testgen.rs  tests.rs
evaluation/: .gitignore  csv_from_coverage.ts  get_seq_coverage.sh  graphs.py  package.json  seq_eval_cov_modes.sh
js_tools/: api_info.js
mining/: .gitignore  mine_static_api_args.ql  parse_QL_into_json.py  parse_all_ql_into_json.sh  qlpack.yml  run_query.sh
nessie/: .gitignore  Cargo.toml  get_api_specs.sh  package-lock.json  ree
nessie/js_tools/: fs-extra_discovery.json  help_me_lord.js  jsonfile_discovery.json  package-lock.json  package.json  stupid_test.js
nessie/src/: consts.rs  decisions.rs  errors.rs  functions.rs  lib.rs  main.rs  mined_seed_reps.rs  testgen.rs  tests.rs
src/: code_gen.rs  consts.rs  decisions.rs  discovery.rs  errors.rs  functions.rs  lib.rs  main.rs  mined_seed_reps.rs  module_reps.rs  testgen.rs  tests.rs
src/legacy/: discovery.rs
