[package]
name = "df-testgen"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
rand_derive = "0.5.0"
structopt = "0.3.25"
serde = {version = "1.0.132", features = ["derive"]}
serde_json = "1.0.73"
indextree = "4.5.0"
strum = "0.24.1"
strum_macros = "0.24.3"
